[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/MinistrelPostel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/FFFTusj.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 128
extra_spacing_char = 8
extra_spacing_space = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 2
outline_color = Color( 0.831373, 0.831373, 0.831373, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.12549, 0.25098, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1280.0
margin_bottom = 720.0
custom_constants/separation = 100
alignment = 1

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 1280.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.878431, 0.25098, 0.878431, 1 )
custom_colors/font_color_shadow = Color( 0.188235, 0.313726, 0.313726, 1 )
custom_constants/shadow_offset_x = 8
custom_constants/shadow_offset_y = 8
text = "Angry Balls!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 541.0
margin_top = 361.0
margin_right = 738.0
margin_bottom = 456.0
focus_mode = 0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.752941, 0.12549, 0.752941, 1 )
custom_colors/font_color_hover = Color( 0.188235, 0.67451, 0.67451, 1 )
custom_colors/font_color_pressed = Color( 0.878431, 0.658824, 0.12549, 1 )
enabled_focus_mode = 0
text = "Play!"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AuthorLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 556.0
margin_right = 1280.0
margin_bottom = 606.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.878431, 0.658824, 0.12549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "By Kamil Warcho≈Ç"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_rect_changed" from="MarginContainer/VBoxContainer/TitleLabel" to="." method="_on_title_label_resized"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed" flags=6]
